# Body-simulation

./: .gitignore  Body.c  Body.h  BodyArray.h  CMakeLists.txt  bodyArray.c  main  main.c  render.h
include/: Body.h
resources/: r.md
src/: Body.c  main.c  render.c
